feat: 실행 파일 작성